Renomear 'cliente'/empresa a 'restaurante'
